Version 1.4.6+svn:
 * campaigns:
   * Heir to the Throne:
     * Added an idle animation for L2 Princess.
 * language and i18n:
   * updated translations: Danish, Finnish, Hungarian, Italian
 * miscellaneous and bug fixes:
   * replace a #elif without condition with #else (debian patch #505957)

Version 1.4.6:
 * language and i18n:
   * updated translations: Czech, Danish, Finnish, French, Galician, German,
     Hungarian, Italian, Polish, Slovak, Turkish, Valencian
 * graphics
   * fixed the parts of the undead flags which were not TC'd

Version 1.4.5:
 * campaigns:
   * Sceptre of Fire
     * Fixed a coordinate bug that caused 'Hills of the Shorbear Clan' to not
       end when it was supposed to.
     * Fixed a bug that allowed one to finish 'The Dragon' by defeating both
       enemy leaders.
 * graphics:
   * new portraits: Silver Mages, White Mages, female Mage of Light, Arch Mages,
     Red Mages, Dark Adepts, female Necromancer/Dark Sorceress, L1 Mages, Lich
 * language and i18n:
   * updated translations: Chinese (Traditional), Czech, Danish, French,
     Galician, German, Hungarian, Italian, Lithuanian, Polish, Russian,
     Spanish
   * updated manpages: Hungarian
   * updated manual: Hungarian
   * fonts: DejaVuSans 2.26
 * miscellaneous and bug fixes:
   * Fixed linewrapping with not to wrap markups (bug #11946 and bug #11945)
   * Fixed OOS bug when giving control and having move in undo stack.
   * Fixed crash when ai moves units next to level 0 hiden unit (bug #12252)
   * Fixed loading ai parameters. MP side defination now overwrites
     era values (bug #12171)
   * Fixed MP saves to transfer correct completion state to remote clients
     when loadin game (bug #10385)
   * Fixed the list of the unit's attacks getting cut off in the right panel
     (bug #12297).

Version 1.4.4:
 * language and i18n:
   * new translation: Latvian
   * updated translations: Arabic, Catalan, Chinese (Traditional), Czech,