@@ -168,6 +168,12 @@ void replay::set_save_info(const game_state& save)
 	saveInfo_ = save;
 }
 
+void replay::set_save_info(const game_state& save, const game_data& data, const config::child_list& players)
+{
+	saveInfo_ = save;
+    saveInfo_.players.clear();
+    saveInfo_.load_recall_list(data, players);
+}
 
 void replay::set_save_info_completion(const std::string &st)
 // This function is a kluge to get around the fact that replay objects carry
@@ -202,7 +208,7 @@ void replay::save_game(const std::string& label, const config& snapshot,
 
 	saveInfo_.label = label;
 
-	std::string filename = label; 
+	std::string filename = label;
 	if(preferences::compress_saves()) {
 		filename += ".gz";
 	}
@@ -461,7 +467,7 @@ void replay::add_chat_log_entry(const config* speak, std::stringstream& str, con
 		}
 		str << cfg["message"] << "\n";
 	}
-	
+
 }
 
 void replay::remove_command(int index)
@@ -777,7 +783,7 @@ bool do_replay(game_display& disp, const gamemap& map, const game_data& gameinfo
 
 bool do_replay_handle(game_display& disp, const gamemap& map, const game_data& gameinfo,
 					  unit_map& units, std::vector<team>& teams, int team_num,
-					  const gamestatus& state, game_state& state_of_game, 
+					  const gamestatus& state, game_state& state_of_game,
 					  const std::string& do_untill)
 {
 	//a list of units that have promoted from the last attack
@@ -790,10 +796,10 @@ bool do_replay_handle(game_display& disp, const gamemap& map, const game_data& g
 	for(;;) {
 		config* const cfg = get_replay_source().get_next_action();
 		config* child;
-		
+
 
 		//do we need to recalculate shroud after this action is processed?
-		
+
 		bool fix_shroud = false;
 		if (cfg)
 		{
@@ -803,7 +809,7 @@ bool do_replay_handle(game_display& disp, const gamemap& map, const game_data& g
 		{
 			DBG_REPLAY << "Repaly data at end\n";
 		}
-		
+
 
 		//if we are expecting promotions here
 		if(advancing_units.empty() == false) {
@@ -841,7 +847,7 @@ bool do_replay_handle(game_display& disp, const gamemap& map, const game_data& g
 		}
 
 		// We return if caller wants it for this tag
-		if (!do_untill.empty() 
+		if (!do_untill.empty()
 			&& cfg->child(do_untill) != NULL)
 		{
 			get_replay_source().revert_action();
@@ -901,7 +907,7 @@ bool do_replay_handle(game_display& disp, const gamemap& map, const game_data& g
 			} else {
 				// Users can rename units while it's being killed at another machine.
 				// This since the player can rename units when it's not his/her turn.
-				// There's not a simple way to prevent that so in that case ignore the 
+				// There's not a simple way to prevent that so in that case ignore the
 				// rename instead of throwing an OOS.
 				WRN_REPLAY << "attempt to rename unit at location: "
 				   << loc << ", where none exists (anymore).\n";
