@@ -41,6 +41,7 @@ public:
 	explicit replay(const config& cfg);
 
 	void set_save_info(const game_state& save);
+    void set_save_info(const game_state& save, const game_data& data, const config::child_list& players);
 	void set_save_info_completion(const std::string &st);
 
 	void set_skip(bool skip);
@@ -73,7 +74,7 @@ public:
 	 * determines which advancement option has been choosen
 	 */
 	void add_advancement(const gamemap::location& loc);
-	
+
 	void add_chat_message_location();
 	void speak(const config& cfg);
 	std::string build_chat_log(const std::string& team);
@@ -146,7 +147,7 @@ private:
 	game_state saveInfo_;
 
 	bool skip_;
-	
+
 	std::vector<int> message_locations;
 };
 
@@ -162,7 +163,7 @@ bool do_replay(game_display& disp, const gamemap& map, const game_data& gameinfo
 
 bool do_replay_handle(game_display& disp, const gamemap& map, const game_data& gameinfo,
 					  unit_map& units, std::vector<team>& teams, int team_num,
-	   const gamestatus& state, game_state& state_of_game, 
+	   const gamestatus& state, game_state& state_of_game,
 	const std::string& do_untill);
 
 //an object which can be made to undo a recorded move
