@@ -6,6 +6,7 @@ Version 1.4.6+svn:
    * updated translations: Danish, Finnish, Hungarian, Italian
  * miscellaneous and bug fixes:
    * replace a #elif without condition with #else (debian patch #505957)
+   * fixed campaign replays (bug #12005)
 
 Version 1.4.6:
  * language and i18n:
